# django_messages_server

./: pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
cozmessages/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
cozmessages/migrations/: 0001_initial.py  0002_cozmessage_date.py  0003_auto_20221128_1645.py  0004_auto_20221129_1025.py  0005_submit.py
